--- a/config/content.htm
+++ b/config/content.htm
@@ -321,7 +321,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
-<div id="brython_div2"></div>
+<h1>w12</h1>
+<p><a href="/get_page/w12/init_replit">零件1檔案</a></p>
 <!-- editor2 結束 --><hr/>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
