--- a/content/w12.html
+++ b/content/w12.html
@@ -2,6 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,16 +142,12 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content"> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>About</h1>
-<p>網頁: <a href="https://liu16552.github.io/cd2024/">https://liu16552.github.io/cd2024/</a></p>
-<p>網誌: <a href="https://liu16552.github.io/cd2024/blog">https://liu16552.github.io/cd2024/blog</a></p>
-<p>簡報: <a href="https://liu16552.github.io/cd2024/reveal">https://liu16552.github.io/cd2024/reveal</a></p>
-<p>倉儲: <a href="https://github.com/Liu16552/cd2024">https://github.com/Liu16552/cd2024</a></p>
-<p>本 cmsimde 網際內容管理系統的對應 Template 倉儲:</p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecycu/cmsimde_site">https://github.com/mdecycu/cmsimde_site</a></p>
-<p style="padding-left: 30px;">此 Template 將 cmsimde 作為子目錄而非子模組, 使用者可以依照需求自行修改</p>
-<p style="padding-left: 30px;">倉儲對應網站: <a href="https://mde.tw/cmsimde_site">https://mde.tw/cmsimde_site</a></p>
-<br /> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
+    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <br /><h1>w12</h1>
+<p><a href="/get_page/w12/init_replit">零件1檔案</a></p>
+<!-- editor2 結束 --><hr/>
+<p>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
+</p><br />Brython << <a href='Brython.html'>Previous</a> </div>
 
     <!-- footer -->
       <div class="container">
