--- a/content/w12.html
+++ b/content/w12.html
@@ -144,6 +144,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <br /><h1>w12</h1>
 <p><a href="/get_page/w12/init_replit">零件1檔案</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7TIj3dZD3IE" width="560"></iframe></p>
 <!-- editor2 結束 --><hr/>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
