--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -323,6 +323,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <h1>w12</h1>
 <p><a href="/get_page/w12/init_replit">零件1檔案</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7TIj3dZD3IE" width="560"></iframe></p>
 <!-- editor2 結束 --><hr/>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
