--- a/content/協同資料分類.html
+++ b/content/協同資料分類.html
@@ -142,21 +142,14 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">cmsimde << <a href='cmsimde.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>Replit</h1>
-<p><a href="https://replit.com">https://replit.com</a></p>
-<p>利用 init_replit 指令安裝所需 Python 模組<br/><br/>chmod u+x init_replit<br/><br/>./init_replit</p>
-<p dir="auto">On Replit:</p>
-<p dir="auto">.replit: python3 main.py</p>
-<p dir="auto">chmod u+x cms init_replit</p>
-<p dir="auto">./init_replit</p>
-<p dir="auto" style="padding-left: 30px;">for cmsimde_site (not needed): git submodule update --init --recursive</p>
-<p dir="auto" style="padding-left: 30px;">for cmsimde: pip install flask flask_cors bs4 lxml pelican markdown gevent</p>
-<p dir="auto">password generator: <a href="https://mde.tw/cmsite/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/b92b16621dd0246c352cf13d6463b333/raw/0bfa669750aba3abe48554509bbd43d65b6e5c82/hashlib_password_generator.py">https://mde.tw/cmsite/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/b92b16621dd0246c352cf13d6463b333/raw/0bfa669750aba3abe48554509bbd43d65b6e5c82/hashlib_password_generator.py</a> </p>
-<p dir="auto"></p>
-<p dir="auto">for IPv6 only Ubuntu:<br/><br/>.ssh 目錄中的 config, 將 SSH session 名稱設為 github.com:<br/><br/>Host github.com<br/>User git<br/>Hostname github.com<br/>ProxyCommand /usr/bin/ncat --proxy p4.cycu.org:3128 --proxy-type http %h %p<br/><br/>for Replit:<br/><br/>.ssh 目錄中的 config, 將 SSH session 名稱設為 github.com:<br/><br/>Host github.com<br/>User git<br/>Hostname github.co<br/>#since Replit works for IPv4, therefore no ProxyCommand setting needed<br/>#ProxyCommand /usr/bin/ncat --proxy p4.cycu.org:3128 --proxy-type http %h %p</p>
-<p></p>
-<p></p>
-<br />cmsimde << <a href='cmsimde.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+    <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <br /><h1>協同資料分類</h1>
+<p>顯示倉儲和網站</p>
+<p>from browser import window, ajax</p>
+<p>def fetch_csv_data():<br/> url = "https://mdecd2024.github.io/2bstud-2bsite/downloads/2b.txt"<br/> <br/> def on_complete(req):<br/> if req.status == 200 or req.status == 0:<br/> content = req.text<br/> lines = content.split('\n')<br/> for line in lines:<br/> if line.strip() == "":<br/> continue<br/> items = line.split(',')<br/> if len(items) &gt;= 3:<br/> github_username_1 = items[1].strip() # 第三個逗號後到第四個逗號前的數據<br/> team = items[2].strip() # 第四個逗號後的數據<br/> team2 = items[2].strip()<br/> github_url_1 = f"個人倉儲:https://github.com/{github_username_1}/cd2024"<br/> team = f"分組倉儲:https://github.com/mdecd2024/2b-midbg{team}"<br/> team2 = f"分組網頁:https://mdecd2024.github.io/2b-midbg{team2}"<br/> csv_data = items[1].strip() # 取得 CSV 中第三個逗號後的資料<br/> github_io_url = f"個人網頁:https://{csv_data}.github.io/cd2024/" # 新的 GitHub IO URL<br/> line_with_urls = f"{line.strip()},{github_url_1},{github_io_url},{team},{team2}" # 以逗號分隔的資料串<br/> print(line_with_urls)<br/> else:<br/> print("Error:", req.text)<br/> <br/> req = ajax.ajax()<br/> req.bind('complete', on_complete)<br/> req.open('GET', url, True)<br/> req.set_header('content-type', 'application/x-www-form-urlencoded')<br/> req.send()</p>
+<p>fetch_csv_data()</p>
+<p>
+<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
+</p><br />w12 << <a href='w12.html'>Previous</a> </div>
 
     <!-- footer -->
       <div class="container">
