--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -321,6 +321,9 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
+<h1>期中學習技能統整</h1>
+<h2>相關影片介紹</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/gvdwruzkbis?si=wKD3XH7rNYvLI6xS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
 <h1>w12</h1>
 <p><a href="/get_page/w12/init_replit">零件1檔案</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7TIj3dZD3IE" width="560"></iframe></p>
@@ -334,6 +337,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/u_FxQgxKRGM?si=0LXJLnl_G-_uv-zX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
 <h2>評量項目二</h2>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/i7WcMlvaMKk?si=zyhq5kDhdrrflGLk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
+<h2>評量項目三</h2>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/Tjz_NccVTSA?si=Sz69DMRB9u2bZtak" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
 </p>
