--- a/content/Brython.html
+++ b/content/Brython.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='w12.html'>w12</a><li><a href='協同資料分類.html'>協同資料分類</a><li class='has-children'><a href='W17.html'>W17</a><ul class='dropdown'><li><a href='評量項目一.html'>評量項目一</a><li><a href='評量項目二.html'>評量項目二</a><li><a href='評量項目三.html'>評量項目三</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='期中學習技能統整.html'>期中學習技能統整</a><ul class='dropdown'><li><a href='自製影片介紹.html'>自製影片介紹</a></li></ul><li><a href='w12.html'>w12</a><li><a href='協同資料分類.html'>協同資料分類</a><li class='has-children'><a href='W17.html'>W17</a><ul class='dropdown'><li><a href='評量項目一.html'>評量項目一</a><li><a href='評量項目二.html'>評量項目二</a><li><a href='評量項目三.html'>評量項目三</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">Replit << <a href='Replit.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>Brython</h1>
+    <div id="tipue_search_content">Replit << <a href='Replit.html'>Previous</a> <a href='期中學習技能統整.html'>Next</a> >> 期中學習技能統整<br /><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -425,7 +425,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
-<br />Replit << <a href='Replit.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+<br />Replit << <a href='Replit.html'>Previous</a> <a href='期中學習技能統整.html'>Next</a> >> 期中學習技能統整</div>
 
     <!-- footer -->
       <div class="container">
