--- a/content/w12.html
+++ b/content/w12.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='w12.html'>w12</a><li><a href='協同資料分類.html'>協同資料分類</a><li class='has-children'><a href='W17.html'>W17</a><ul class='dropdown'><li><a href='評量項目一.html'>評量項目一</a><li><a href='評量項目二.html'>評量項目二</a><li><a href='評量項目三.html'>評量項目三</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='期中學習技能統整.html'>期中學習技能統整</a><ul class='dropdown'><li><a href='自製影片介紹.html'>自製影片介紹</a></li></ul><li><a href='w12.html'>w12</a><li><a href='協同資料分類.html'>協同資料分類</a><li class='has-children'><a href='W17.html'>W17</a><ul class='dropdown'><li><a href='評量項目一.html'>評量項目一</a><li><a href='評量項目二.html'>評量項目二</a><li><a href='評量項目三.html'>評量項目三</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,10 +142,10 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='協同資料分類.html'>Next</a> >> 協同資料分類<br /><h1>w12</h1>
+    <div id="tipue_search_content">自製影片介紹 << <a href='自製影片介紹.html'>Previous</a> <a href='協同資料分類.html'>Next</a> >> 協同資料分類<br /><h1>w12</h1>
 <p><a href="/get_page/w12/init_replit">零件1檔案</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7TIj3dZD3IE" width="560"></iframe></p>
-<br />Brython << <a href='Brython.html'>Previous</a> <a href='協同資料分類.html'>Next</a> >> 協同資料分類</div>
+<br />自製影片介紹 << <a href='自製影片介紹.html'>Previous</a> <a href='協同資料分類.html'>Next</a> >> 協同資料分類</div>
 
     <!-- footer -->
       <div class="container">
