--- a/content/期中學習技能統整.html
+++ b/content/期中學習技能統整.html
@@ -142,8 +142,8 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">協同資料分類 << <a href='協同資料分類.html'>Previous</a> <a href='評量項目一.html'>Next</a> >> 評量項目一<br /><h1>W17</h1>
-<br />協同資料分類 << <a href='協同資料分類.html'>Previous</a> <a href='評量項目一.html'>Next</a> >> 評量項目一</div>
+    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='自製影片介紹.html'>Next</a> >> 自製影片介紹<br /><h1>期中學習技能統整</h1>
+<br />Brython << <a href='Brython.html'>Previous</a> <a href='自製影片介紹.html'>Next</a> >> 自製影片介紹</div>
 
     <!-- footer -->
       <div class="container">
