--- a/content/自製影片介紹.html
+++ b/content/自製影片介紹.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,8 +142,9 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">協同資料分類 << <a href='協同資料分類.html'>Previous</a> <a href='評量項目一.html'>Next</a> >> 評量項目一<br /><h1>W17</h1>
-<br />協同資料分類 << <a href='協同資料分類.html'>Previous</a> <a href='評量項目一.html'>Next</a> >> 評量項目一</div>
+    <div id="tipue_search_content">期中學習技能統整 << <a href='期中學習技能統整.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>自製影片介紹</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/gvdwruzkbis?si=wKD3XH7rNYvLI6xS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
+<br />期中學習技能統整 << <a href='期中學習技能統整.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
 
     <!-- footer -->
       <div class="container">
