--- a/content/W18.html
+++ b/content/W18.html
@@ -142,8 +142,8 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='自製影片介紹.html'>Next</a> >> 自製影片介紹<br /><h1>期中學習技能統整</h1>
-<br />Brython << <a href='Brython.html'>Previous</a> <a href='自製影片介紹.html'>Next</a> >> 自製影片介紹</div>
+    <div id="tipue_search_content">評量項目三 << <a href='評量項目三.html'>Previous</a> <a href='模擬測試.html'>Next</a> >> 模擬測試<br /><h1>W18</h1>
+<br />評量項目三 << <a href='評量項目三.html'>Previous</a> <a href='模擬測試.html'>Next</a> >> 模擬測試</div>
 
     <!-- footer -->
       <div class="container">
