--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -129,7 +129,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='期中學習技能統整.html'>期中學習技能統整</a><ul class='dropdown'><li><a href='自製影片介紹.html'>自製影片介紹</a></li></ul><li><a href='w12.html'>w12</a><li><a href='協同資料分類.html'>協同資料分類</a><li class='has-children'><a href='W17.html'>W17</a><ul class='dropdown'><li><a href='評量項目一.html'>評量項目一</a><li><a href='評量項目二.html'>評量項目二</a><li><a href='評量項目三.html'>評量項目三</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='期中學習技能統整.html'>期中學習技能統整</a><ul class='dropdown'><li><a href='自製影片介紹.html'>自製影片介紹</a></li></ul><li><a href='w12.html'>w12</a><li><a href='協同資料分類.html'>協同資料分類</a><li class='has-children'><a href='W17.html'>W17</a><ul class='dropdown'><li><a href='評量項目一.html'>評量項目一</a><li><a href='評量項目二.html'>評量項目二</a><li><a href='評量項目三.html'>評量項目三</a></li></ul><li class='has-children'><a href='W18.html'>W18</a><ul class='dropdown'><li><a href='模擬測試.html'>模擬測試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,4 +140,4 @@ img.add_border {
           </div>
 
         </header>
-    </nav><section><h1>SMap</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='期中學習技能統整.html'>期中學習技能統整</a><ul><li><a href='自製影片介紹.html'>自製影片介紹</a></li></ul><li><a href='w12.html'>w12</a><li><a href='協同資料分類.html'>協同資料分類</a><li><a href='W17.html'>W17</a><ul><li><a href='評量項目一.html'>評量項目一</a><li><a href='評量項目二.html'>評量項目二</a><li><a href='評量項目三.html'>評量項目三</a></li></ul></section></div></body></html>
+    </nav><section><h1>SMap</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='期中學習技能統整.html'>期中學習技能統整</a><ul><li><a href='自製影片介紹.html'>自製影片介紹</a></li></ul><li><a href='w12.html'>w12</a><li><a href='協同資料分類.html'>協同資料分類</a><li><a href='W17.html'>W17</a><ul><li><a href='評量項目一.html'>評量項目一</a><li><a href='評量項目二.html'>評量項目二</a><li><a href='評量項目三.html'>評量項目三</a></li></ul><li><a href='W18.html'>W18</a><ul><li><a href='模擬測試.html'>模擬測試</a></li></ul></section></div></body></html>
