--- a/content/評量項目三.html
+++ b/content/評量項目三.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='期中學習技能統整.html'>期中學習技能統整</a><ul class='dropdown'><li><a href='自製影片介紹.html'>自製影片介紹</a></li></ul><li><a href='w12.html'>w12</a><li><a href='協同資料分類.html'>協同資料分類</a><li class='has-children'><a href='W17.html'>W17</a><ul class='dropdown'><li><a href='評量項目一.html'>評量項目一</a><li><a href='評量項目二.html'>評量項目二</a><li><a href='評量項目三.html'>評量項目三</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li class='has-children'><a href='期中學習技能統整.html'>期中學習技能統整</a><ul class='dropdown'><li><a href='自製影片介紹.html'>自製影片介紹</a></li></ul><li><a href='w12.html'>w12</a><li><a href='協同資料分類.html'>協同資料分類</a><li class='has-children'><a href='W17.html'>W17</a><ul class='dropdown'><li><a href='評量項目一.html'>評量項目一</a><li><a href='評量項目二.html'>評量項目二</a><li><a href='評量項目三.html'>評量項目三</a></li></ul><li class='has-children'><a href='W18.html'>W18</a><ul class='dropdown'><li><a href='模擬測試.html'>模擬測試</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,11 +142,9 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">評量項目二 << <a href='評量項目二.html'>Previous</a> <br /><h1>評量項目三</h1>
+    <div id="tipue_search_content">評量項目二 << <a href='評量項目二.html'>Previous</a> <a href='W18.html'>Next</a> >> W18<br /><h1>評量項目三</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/Tjz_NccVTSA?si=Sz69DMRB9u2bZtak" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></p>
-<p>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><br />評量項目二 << <a href='評量項目二.html'>Previous</a> </div>
+<br />評量項目二 << <a href='評量項目二.html'>Previous</a> <a href='W18.html'>Next</a> >> W18</div>
 
     <!-- footer -->
       <div class="container">
